--- a/print_app/static/index.html
+++ b/print_app/static/index.html
@@ -6,13 +6,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Печать</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="alternate icon" href="/static/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h1>Отправка на печать</h1>
     <textarea id="text" placeholder="Введите текст"></textarea><br>
     <button id="printBtn">Печать</button>
     <p id="status"></p>
-    <script src="/static/script.js"></script>
+    <script src="/static/scripts.js"></script>
 </body>
 </html>
